--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "globals": "^15.7.0",
         "typescript": "^5.0.2",
         "typescript-eslint": "^7.15.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vitest": "^1.6.0"
     }
 }
