--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "typescript": "^5.0.2",
         "typescript-eslint": "^7.15.0",
         "vite": "^5.0.0",
+        "vite-tsconfig-paths": "^4.3.2",
         "vitest": "^1.6.0"
     }
 }
