--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@tauri-apps/api": "^1",
+        "decimal.js": "^10.4.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
