--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "@tauri-apps/api": "^1",
         "decimal.js": "^10.4.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "ts-pattern": "^5.2.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.6.0",
