--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.19",
         "babel-plugin-rename-jsx-attribute": "^0.2.4",
         "babel-plugin-transform-jsx-classnames": "^1.2.2",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.3",
         "globals": "^15.7.0",
+        "postcss": "^8.4.39",
+        "tailwindcss": "^3.4.4",
         "typescript": "^5.0.2",
         "typescript-eslint": "^7.15.0",
         "vite": "^5.0.0",
