--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 
 		/* Linting */
 		"strict": true,
+		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
