--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@tauri-apps/api": "1",
         "decimal.js": "10.4.3",
+        "neverthrow": "6.2.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "ts-pattern": "5.2.0"
