--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "abicus",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "test": "vitest",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "tauri": "tauri"
-    },
-    "dependencies": {
-        "@tauri-apps/api": "1",
-        "decimal.js": "10.4.3",
-        "neverthrow": "6.2.2",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "ts-pattern": "5.2.0"
-    },
-    "devDependencies": {
-        "@eslint/js": "9.6.0",
-        "@tauri-apps/cli": "1",
-        "@types/react": "18.2.15",
-        "@types/react-dom": "18.2.7",
-        "@vitejs/plugin-react": "4.2.1",
-        "autoprefixer": "10.4.19",
-        "babel-plugin-rename-jsx-attribute": "0.2.4",
-        "babel-plugin-transform-jsx-classnames": "1.2.2",
-        "eslint": "8.57.0",
-        "eslint-plugin-react": "7.34.3",
-        "globals": "15.7.0",
-        "postcss": "8.4.39",
-        "tailwindcss": "3.4.4",
-        "typescript": "5.0.2",
-        "typescript-eslint": "7.15.0",
-        "vite": "5.0.0",
-        "vite-tsconfig-paths": "4.3.2",
-        "vitest": "1.6.0"
-    }
+  "name": "abicus",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "test": "vitest",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
+  },
+  "dependencies": {
+    "@tauri-apps/api": "1",
+    "decimal.js": "10.4.3",
+    "neverthrow": "6.2.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "ts-pattern": "5.2.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.6.0",
+    "@playwright/test": "1.45.3",
+    "@tauri-apps/cli": "1",
+    "@types/node": "20.14.12",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.19",
+    "babel-plugin-rename-jsx-attribute": "0.2.4",
+    "babel-plugin-transform-jsx-classnames": "1.2.2",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "7.34.3",
+    "globals": "15.7.0",
+    "postcss": "8.4.39",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.0.2",
+    "typescript-eslint": "7.15.0",
+    "vite": "5.0.0",
+    "vite-tsconfig-paths": "4.3.2",
+    "vitest": "1.6.0"
+  }
 }
