--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.19",
     "babel-plugin-rename-jsx-attribute": "0.2.4",
     "babel-plugin-transform-jsx-classnames": "1.2.2",
+    "concurrently": "8.2.2",
     "eslint": "8.57.0",
     "eslint-plugin-react": "7.34.3",
     "globals": "15.7.0",
