--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ jobs:
             platform: macos-latest
             args: "--target x86_64-apple-darwin"
           - title: Ubuntu
-            platform: ubuntu-22.04
+            platform: ubuntu-latest
             args: ""
           - title: Windows
             platform: windows-latest
