--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,8 +1,39 @@
-name: Build and Draft Release
+name: Release
 on: [workflow_dispatch]
 
 jobs:
-  build:
+  build-docker:
+    name: Build Docker Image and Push to Abitti 2 ECR
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.UTILITY_ACCOUNT_ID }}:role/AbicusGithubActionsAccessRole
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db
+
+      - name: Check out
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+
+      - name: Get package version
+        run: echo "ABICUS_VERSION=$(jq -r '.version' package.json)" >> $GITHUB_ENV
+
+      - name: Build and push
+        uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85
+        with:
+          push: true
+          tags: ${{ steps.login-ecr.outputs.registry }}/abicus:${{ env.ABICUS_VERSION }}
+          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-binaries:
     strategy:
       fail-fast: false
       matrix:
@@ -20,7 +51,7 @@ jobs:
             platform: windows-latest
             args: ""
 
-    name: ${{ matrix.title }}
+    name: Build Desktop Application (${{ matrix.title }})
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Check out
