Pass git hash as arg in docker build

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,7 @@ jobs:
           provenance: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: GIT_HASH=${{ github.sha }}
 
   build-binaries:
     strategy:
