--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85
         with:
           push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/abicus:${{ env.ABICUS_VERSION }}
+          tags: ${{ steps.login-ecr.outputs.registry }}/abicus:${{ env.ABICUS_VERSION }}-${{ github.run_number }}.${{ github.run_attempt }}
           provenance: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
