--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,8 +75,7 @@ jobs:
         shell: powershell
         run: |
           $abicus_ver = jq -r ".version" package.json
-          echo $abicus_ver
-          jq ".version = \`"$abicus_ver-${{ github.run_number }}.${{ github.run_attempt }}\`"" package.json | Out-File tmp-package.json -Encoding UTF8
+          jq --binary ".version = \`"$abicus_ver-${{ github.run_number }}.${{ github.run_attempt }}\`"" package.json | Out-File tmp-package.json -Encoding UTF8
           cat tmp-package.json
           Move-Item -Path tmp-package.json -Destination package.json -Force
 
