--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,7 +76,7 @@ jobs:
         shell: powershell
         run: |
           $abicus_ver = jq -r ".version" package.json
-          jq --binary ".version = \`"$abicus_ver-${{ github.run_number }}.${{ github.run_attempt }}\`"" package.json | Out-File tmp-package.json -Encoding UTF8
+          jq ".version = \`"$abicus_ver-${{ github.run_number }}.${{ github.run_attempt }}\`"" package.json | tr -d '\r' | Out-File tmp-package.json -Encoding UTF8
           cat tmp-package.json
           Move-Item -Path tmp-package.json -Destination package.json -Force
           $content = Get-Content -Path package.json -Raw
