--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,7 +2,27 @@ name: Release
 on: [workflow_dispatch]
 
 jobs:
+  run-tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+
+      - name: Set up Node
+        uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b
+        with:
+          node-version: 20.15.0
+          cache: "npm"
+
+      - name: Install Node dependencies
+        run: npm ci
+
+      - name: Test
+        run: npm run test
+
   build-pages:
+    needs: run-tests
     name: Build GitHub Page
     runs-on: ubuntu-latest
     permissions:
@@ -19,6 +39,7 @@ jobs:
         uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b
         with:
           node-version: 20.15.0
+          cache: "npm"
 
       - name: Install Node dependencies
         run: npm ci
@@ -36,6 +57,7 @@ jobs:
         uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e
 
   build-docker:
+    needs: run-tests
     name: Build Docker Image and Push to Abitti 2 ECR
     runs-on: ubuntu-latest
     permissions:
@@ -72,6 +94,7 @@ jobs:
           build-args: GIT_HASH=${{ github.sha }}
 
   build-binaries:
+    needs: run-tests
     strategy:
       fail-fast: false
       matrix:
