--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,8 +25,9 @@ jobs:
         run: npm run test
 
   build-pages:
-    needs: run-tests
     name: Build GitHub Page
+    needs: run-tests
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions:
       pages: write
