--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,11 +91,13 @@ jobs:
         uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85
         with:
           push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/abicus:v${{ env.ABICUS_VERSION }}-${{ github.run_number }}.${{ github.run_attempt }}
           provenance: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: GIT_HASH=${{ github.sha }}
+          tags: |
+            ${{ steps.login-ecr.outputs.registry }}/abicus:v${{ env.ABICUS_VERSION }}-${{ github.run_number }}.${{ github.run_attempt }}
+            ${{ steps.login-ecr.outputs.registry }}/abicus-prod:v${{ env.ABICUS_VERSION }}-${{ github.run_number }}.${{ github.run_attempt }}
 
   build-binaries:
     needs: run-tests
