--- a/.github/workflows/release-prod.yaml
+++ b/.github/workflows/release-prod.yaml
@@ -1,9 +1,24 @@
-name: Release
+name: Release (Production version for A2 + Binaries + GH Pages)
 on: [workflow_dispatch]
 
 jobs:
+  validate-tag:
+    name: Validate tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Tag to Build on
+        run: |
+          TAG="${{ github.ref_name }}"
+          if [[ ! "$TAG" =~ ^v ]]; then
+            echo "The workflow was run from an invalid ref."
+            echo "Expected the ref name to start with a \"v\"."
+            echo "If using the GitHub UI, please select a tag from the \"Use workflow from\" dropdown."
+            exit 1
+          fi
+
   run-tests:
     name: Run Tests
+    needs: validate-tag
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -27,7 +42,6 @@ jobs:
   build-pages:
     name: Build GitHub Page
     needs: run-tests
-    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions:
       pages: write
@@ -60,9 +74,9 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e
 
-  build-docker:
+  tag-docker:
     needs: run-tests
-    name: Build Docker Image and Push to Abitti 2 ECR
+    name: Pull Dev Image from A2 ECR and Tag It as Prod
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -78,26 +92,14 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db
+      - name: Pull Dev Image
+        run: docker pull ${{ steps.login-ecr.outputs.registry }}/abicus:${{ github.ref_name }}
 
-      - name: Check out
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+      - name: Tag Dev Image as Prod Image
+        run: docker tag ${{ steps.login-ecr.outputs.registry }}/abicus:${{ github.ref_name }} ${{ steps.login-ecr.outputs.registry }}/abicus-prod:${{ github.ref_name }}
 
-      - name: Get package version
-        run: echo "ABICUS_VERSION=$(jq -r '.version' package.json)" >> $GITHUB_ENV
-
-      - name: Build and push
-        uses: docker/build-push-action@5cd11c3a4ced054e52742c5fd54dca954e0edd85
-        with:
-          push: true
-          provenance: false
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          build-args: GIT_HASH=${{ github.sha }}
-          tags: |
-            ${{ steps.login-ecr.outputs.registry }}/abicus:v${{ env.ABICUS_VERSION }}-${{ github.run_number }}.${{ github.run_attempt }}
-            ${{ steps.login-ecr.outputs.registry }}/abicus-prod:v${{ env.ABICUS_VERSION }}-${{ github.run_number }}.${{ github.run_attempt }}
+      - name: Push Prod Image
+        run: docker push ${{ steps.login-ecr.outputs.registry }}/abicus-prod:${{ github.ref_name }}
 
   build-binaries:
     needs: run-tests
@@ -123,28 +125,6 @@ jobs:
     steps:
       - name: Check out
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
-
-      - name: Inject workflow run information into app version
-        if: matrix.platform == 'ubuntu-20.04' || matrix.platform == 'macos-latest'
-        run: |
-          ABICUS_VERSION=$(jq -r '.version' package.json)
-          TMP_FILE=$(mktemp)
-          jq ".version = \"$ABICUS_VERSION-${{ github.run_number }}.${{ github.run_attempt }}\"" package.json > "$TMP_FILE"
-          mv $TMP_FILE package.json
-
-      - name: Inject workflow run information into app version (Windows)
-        if: matrix.platform == 'windows-latest'
-        shell: powershell
-        run: |
-          $abicus_ver = jq -r ".version" package.json
-          jq ".version = \`"$abicus_ver-${{ github.run_number }}.${{ github.run_attempt }}\`"" package.json | Out-File tmp-package.json -Encoding UTF8
-          Move-Item -Path tmp-package.json -Destination package.json -Force
-          ((Get-Content package.json) -join "`n") + "`n" | Set-Content -NoNewline package.json
-
-          $content = Get-Content -Path package.json -Raw
-          $byte_array = [System.Text.Encoding]::UTF8.GetBytes($content)
-          $base64 = [System.Convert]::ToBase64String($byte_array)
-          echo $base64
 
       - name: Set up Node
         uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b
@@ -176,8 +156,8 @@ jobs:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         with:
           args: ${{ matrix.args }}
-          tagName: v__VERSION__
-          releaseDraft: false
+          releaseDraft: true
+          tagName: ${{ github.ref_name }}
           releaseName: Abicus v__VERSION__
           releaseBody: |
             <img alt="logo" height="100" src="https://github.com/digabi/abicus/blob/master/app-icon.png" />
