--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "7.34.3",
     "globals": "15.7.0",
     "postcss": "8.4.39",
+    "prettier": "^3.5.3",
     "tailwindcss": "3.4.4",
     "typescript": "5.0.2",
     "typescript-eslint": "7.15.0",
