--- a/.github/workflows/release-prod.yaml
+++ b/.github/workflows/release-prod.yaml
@@ -82,11 +82,10 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
+      - name: Assume AWS role
+        uses: digabi/workflows-common/actions/assume-digabi-aws-role@main
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.UTILITY_ACCOUNT_ID }}:role/AbicusGithubActionsAccessRole
-          aws-region: eu-north-1
+          aws-account-id: ${{ secrets.UTILITY_AWS_ACCOUNT_ID }}
 
       - name: Login to Amazon ECR
         id: login-ecr
