--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,10 @@ name: 'Tests'
 on:
   pull_request:
   workflow_dispatch:
-
+  push:
+    branches:
+      - master
+      
 jobs:
   run-tests:
     name: Run Tests
