Disable `npm` dependabot temporarily

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,11 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: /
-  schedule:
-    interval: daily
-    time: 01:00
-  labels: []
-  open-pull-requests-limit: 0
-  cooldown:
-    default-days: 7
+  - package-ecosystem: npm
+    directory: /
+    schedule:
+      interval: daily
+      time: "01:00"
+    labels: []
+    open-pull-requests-limit: 0
+    cooldown:
+      default-days: 7
