--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "9.35.0",
     "@playwright/test": "1.55.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@tauri-apps/cli": "2",
     "@types/node": "24.3.1",
     "@types/react": "18.2.15",
@@ -37,7 +38,7 @@
     "globals": "16.4.0",
     "postcss": "8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "3.4.4",
+    "tailwindcss": "^4.1.14",
     "typescript": "5.9.2",
     "typescript-eslint": "8.43.0",
     "vite": "7.1.5",
