--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "2",
+    "@tauri-apps/plugin-shell": "^2.3.1",
     "decimal.js": "10.6.0",
     "neverthrow": "8.2.0",
     "react": "18.2.0",
