--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,12 +6,13 @@ authors = ["Matriculation Examination Board, Finland"]
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "1.5.3", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1.7.1", features = ["shell-open"] }
+tauri = { version = "2", features = [] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+tauri-plugin-shell = "2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
