--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "abicus",
   "private": true,
-  "version": "1.0.9",
+  "version": "1.0.10-0",
   "type": "module",
   "scripts": {
     "dev": "vite",
