--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "abicus",
 	"private": true,
-	"version": "1.0.10-2",
+	"version": "1.0.10",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
